--- a/src/app/components/alta-paciente/alta-paciente.component.html
+++ b/src/app/components/alta-paciente/alta-paciente.component.html
@@ -1,23 +1,126 @@
-<div *ngIf="altaSuccess">
-    <p>{{altaMessage}}</p>
-</div>
-<div *ngIf="!altaSuccess">
-    <form>
-        <label for="correo">Correo:</label>
-        <input type="text" id="correo" [(ngModel)]="correo" name="correo" required>
-        <br>
-        <label for="contrasena">Contraseña:</label>
-        <input type="password" id="contrasena" [(ngModel)]="contrasena" name="contrasena" required>
-        <br>
-        <label for="nombres">Nombre(s):</label>
-        <input type="text" id="nombres" [(ngModel)]="nombres" name="nombres" required>
-        <br>
-        <label for="paterno">Apellido paterno:</label>
-        <input type="text" id="paterno" [(ngModel)]="paterno" name="paterno" required>
-        <br>
-        <label for="materno">Apellido materno:</label>
-        <input type="text" id="materno" [(ngModel)]="materno" name="materno" required>
-        <br>
-        <button type="button" (click)="register()">Register</button>
-    </form>
-</div>
+<!doctype html>
+<html lang="en" data-bs-theme="auto">
+
+<script src="../../../assets/js/color-modes.js"></script>
+
+<body class="bg-body-tertiary">
+
+    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+        <symbol id="check2" viewBox="0 0 16 16">
+            <path
+                d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
+        </symbol>
+        <symbol id="circle-half" viewBox="0 0 16 16">
+            <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z" />
+        </symbol>
+        <symbol id="moon-stars-fill" viewBox="0 0 16 16">
+            <path
+                d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z" />
+            <path
+                d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z" />
+        </symbol>
+        <symbol id="sun-fill" viewBox="0 0 16 16">
+            <path
+                d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
+        </symbol>
+    </svg>
+
+    <div class="container">
+        <main>
+            <div class="d-flex align-items-center justify-content-center">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-fill-add" viewBox="0 0 16 16">
+                <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                <path d="M2 13c0 1 1 1 1 1h5.256A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1 1.544-3.393Q8.844 9.002 8 9c-5 0-6 3-6 4"/>
+            </svg>
+            <h2 class="ms-2 mb-0">Registro usuario</h2>
+        </div>
+        
+            
+
+            <div *ngIf="altaSuccess" class="alert alert-success" role="alert">
+                {{altaMessage}}
+            </div>
+            <div *ngIf="!altaError" class="alert alert-danger" role="alert">
+                {{altaMessage}}
+            </div>
+
+            <div class="row g-5">
+                <div class="col-md-12 col-lg-12 order-md-last">
+                    <div>
+                        <form (ngSubmit)="register()" class="needs-validation" novalidate [class.was-validated]="submitted">
+                            <div class="row g-3">
+                                <div class="col-sm-12">
+                                    <label for="nombres" class="form-label">Nombre(s)</label>
+                                    <input type="text" class="form-control" id="nombres" [(ngModel)]="nombres"
+                                        name="nombres" required name="nombres">
+                                    <div class="invalid-feedback">
+                                        El nombre del usuario es un dato obligatorio.
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <label for="paterno" class="form-label">Apellido paterno</label>
+                                    <input type="text" class="form-control" id="paterno" [(ngModel)]="paterno"
+                                        name="paterno" name="paterno" required>
+                                    <div class="invalid-feedback">
+                                        El apellido paterno del usuario es un dato obligatorio.
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <label for="materno" class="form-label">Apellido materno</label>
+                                    <input type="text" class="form-control" id="materno" [(ngModel)]="materno"
+                                        name="materno" required name="materno">
+                                    <div class="invalid-feedback">
+                                        El apellido materno del usuario es un dato obligatorio.
+                                    </div>
+                                </div>
+
+                                <div class="col-12">
+                                    <label for="correo" class="form-label">Correo electrónico</label>
+                                    <div class="input-group has-validation">
+                                        <span class="input-group-text">&#64;</span>
+                                        <input type="email" class="form-control" id="correo" [(ngModel)]="correo"
+                                            placeholder="usuario@correo.com" required
+                                            name="correo">
+                                        <div class="invalid-feedback">
+                                            El correo electrónico es un dato obligatorio.
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <label for="contrasena" class="form-label">Contraseña</label>
+                                    <input type="password" class="form-control" id="contrasena" [(ngModel)]="contrasena"
+                                        required name="contrasena">
+                                    <div class="invalid-feedback">
+                                        La Contraseña es un dato obligatorio.
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <label for="country" class="form-label">Tipo de usuario</label>
+                                    <select class="form-select" id="country" required [(ngModel)]="tipo" (change)="onChangeTipoUsuario($event)" name="tipo">
+                                        <option value="">Elija una opción</option>
+                                        <option value="1">Especialista</option>
+                                        <option value="2">Paciente</option>
+                                    </select>
+                                    <div class="invalid-feedback">
+                                        Por favor seleccione un tipo de usuario.
+                                    </div>
+                                </div>
+                            </div>
+
+                            <hr class="my-1">
+
+                            <button class="w-100 btn btn-primary btn-lg" type="submit">Registrar</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+    <script src="checkout.js"></script>
+</body>
+
+</html>
