--- a/src/app/components/alta-paciente/alta-paciente.component.html
+++ b/src/app/components/alta-paciente/alta-paciente.component.html
@@ -26,7 +26,7 @@
     </svg>
 
     <div class="container">
-        <main>
+        <main class="my-3">
             <div class="d-flex align-items-center justify-content-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-fill-add" viewBox="0 0 16 16">
                 <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
