--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,5 @@
 <footer class="my-5 pt-5 text-body-secondary text-center text-small">
+    <hr class="hr" />
     <p class="mb-1">&copy; 2023–2024 TEApp</p>
     <ul class="list-inline">
         <li class="list-inline-item"><a href="#">Privacidad</a></li>
