--- a/src/app/components/inicio/inicio.component.css
+++ b/src/app/components/inicio/inicio.component.css
@@ -1,120 +1,154 @@
 .container {
-    max-width: 960px;
-  }
-  
-  .icon-link > .bi {
-    width: .75em;
-    height: .75em;
-  }
-  
-  /*
-   * Custom translucent site header
-   */
-  
-  .site-header {
-    background-color: rgba(0, 0, 0, .85);
-    -webkit-backdrop-filter: saturate(180%) blur(20px);
-    backdrop-filter: saturate(180%) blur(20px);
-  }
-  .site-header a {
-    color: #8e8e8e;
-    transition: color .15s ease-in-out;
-  }
-  .site-header a:hover {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  .product-device {
-    position: absolute;
-    right: 10%;
-    bottom: -30%;
-    width: 300px;
-    height: 540px;
-    background-color: #b3eafc;
-    border-radius: 21px;
-    transform: rotate(30deg);
-  }
-  
-  .product-device2 {
-    position: absolute;
-    right: 10%;
-    bottom: -30%;
-    width: 200px;
-    height: 500px;
-    background-color: #b3eafc;
-    border-radius: 21px;
-    transform: rotate(30deg);
-  }
-  
-  .product-device::before {
-    position: absolute;
-    top: 10%;
-    right: 10px;
-    bottom: 10%;
-    left: 10px;
-    content: "";
-    background-color: rgba(179, 234, 252, .1);
-    border-radius: 5px;
-  }
-  
-  .product-device-2 {
-    top: -25%;
-    right: auto;
-    bottom: 0;
-    left: 5%;
-    background-color: #ceffff;
-  }
-  
-  .flex-equal > * {
+  max-width: 960px;
+}
+
+.icon-link > .bi {
+  width: .75em;
+  height: .75em;
+}
+
+/*Custom translucent site header*/
+
+.site-header {
+  background-color: rgba(0, 0, 0, .85);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+  backdrop-filter: saturate(180%) blur(20px);
+}
+.site-header a {
+  color: #8e8e8e;
+  transition: color .15s ease-in-out;
+}
+.site-header a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+.product-device {
+  position: absolute;
+  right: 10%;
+  bottom: -30%;
+  width: 300px;
+  height: 540px;
+  background-color: #b3eafc;
+  border-radius: 21px;
+  transform: rotate(30deg);
+}
+
+.product-device2 {
+  position: absolute;
+  right: 10%;
+  bottom: -30%;
+  width: 200px;
+  height: 500px;
+  background-color: #b3eafc;
+  border-radius: 21px;
+  transform: rotate(30deg);
+}
+
+.product-device::before {
+  position: absolute;
+  top: 10%;
+  right: 10px;
+  bottom: 10%;
+  left: 10px;
+  content: "";
+  background-color: rgba(179, 234, 252, .1);
+  border-radius: 5px;
+}
+
+.product-device-2 {
+  top: -25%;
+  right: auto;
+  bottom: 0;
+  left: 5%;
+  background-color: #ceffff;
+}
+
+.flex-equal > * {
+  flex: 1;
+}
+@media (min-width: 768px) {
+  .flex-md-equal > * {
     flex: 1;
   }
-  @media (min-width: 768px) {
-    .flex-md-equal > * {
-      flex: 1;
-    }
+}
+
+.mi-h1-hex {
+  color: #002f57;
+}
+
+.mi-h4-hex {
+  color: #4e6d9c;
+}
+
+.mi-h4-hexSub {
+  color: #b3eafc;
+}
+
+.bg-custom {
+  background-color: #002f57;
+}
+
+/*Caracteristicas*/
+.feature-icon {
+  width: 4rem;
+  height: 4rem;
+  border-radius: .75rem;
+}
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
   }
-  
-  .mi-h1-hex {
+}
+
+.bi {
+  vertical-align: -.125em;
+  fill: currentColor;
+}
+
+/*flipcard*/
+.maincontainer{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.thecard{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: all 0.5s ease;
+}
+
+.thecard:hover{
+  transform: rotateY(180deg);
+}
+
+.thefront{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    background: rgb(0,47,87,0.5);
     color: #002f57;
-  }
-  
-  .mi-h4-hex {
-    color: #4e6d9c;
-  }
-  
-  .mi-h4-hexSub {
-    color: #b3eafc;
-  }
-  
-  .bg-custom {
-    background-color: #002f57;
-  }
+}
 
-  /*Caracteristicas*/
-  .feature-icon {
-    width: 4rem;
-    height: 4rem;
-    border-radius: .75rem;
-  }
-
-  .bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-  }
-
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
-  }
-
-  .bi {
-    vertical-align: -.125em;
-    fill: currentColor;
-  }
-
-    
+.theback{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    background: blueviolet;
+    color: aqua;
+    transform: rotateY(180deg);
+} 
