despliegue esp y paciente

--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <body>
   <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
     <symbol id="check2" viewBox="0 0 16 16">
@@ -55,18 +56,6 @@
         <div class="shadow-sm mx-auto bg-body-tertiary"
           style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
       </div>
-      <!--<div class="bg-body-tertiary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center">
-        <div class="maincontainer me-md-3 pt-3 px-3 pt-md-5 px-md-5">
-        <div class="thecard">
-          <div class="thefront my-3 p-3">
-            <h2 class="display-5 bg fw-bold" style="color: #002f57;">Misión</h2>
-          </div>
-          <div class="theback">
-            adios
-          </div>
-        </div>
-        </div>
-      </div>-->
       <div class="bg-body-tertiary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
         <div class="my-3 p-3">
           <h2 class="display-5 bg fw-bold">Visión</h2>
