--- a/src/app/components/h-especialista/h-especialista.component.html
+++ b/src/app/components/h-especialista/h-especialista.component.html
@@ -18,6 +18,8 @@
     </symbol>
 </svg>
 
+<app-aux-check></app-aux-check>
+
 <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
     <symbol id="bootstrap" viewBox="0 0 118 94">
         <title>TEApp</title>
@@ -50,7 +52,6 @@
     </symbol>
 </svg>
 
-
 <nav class="navbar navbar-expand-md sticky-top border-bottom">
     <div class="container">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -64,44 +65,6 @@
         <ul class="nav nav-pills">
             <li class="nav-item"><a class="nav-link txtColor" routerLink="/inicioSesion">Iniciar sesión</a></li>
             <li class="nav-item"><a class="nav-link txtColor" routerLink="/registro">Regístrate</a></li>
-            <li class ="nav-item">
-                <div class="dropdown">
-                    <button class="btn btn-primary py-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button"
-                        aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (auto)" (click)="setTheme(theme)">
-                        <svg class="bi my-1 theme-icon-active" width="1em" height="1em">
-                            <use href="#circle-half"></use>
-                        </svg>
-                        <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
-                        <li>
-                            <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light"
-                                (click)="setTheme('light')" aria-pressed="false">
-                                <svg class="bi me-2 opacity-50" width="1em" height="1em">
-                                    <use href="#sun-fill"></use>
-                                </svg>
-                                Claro
-                                <svg class="bi ms-auto d-none" width="1em" height="1em">
-                                    <use href="#check2"></use>
-                                </svg>
-                            </button>
-                        </li>
-                        <li>
-                            <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark"
-                                (click)="setTheme('dark')" aria-pressed="false">
-                                <svg class="bi me-2 opacity-50" width="1em" height="1em">
-                                    <use href="#moon-stars-fill"></use>
-                                </svg>
-                                Oscuro
-                                <svg class="bi ms-auto d-none" width="1em" height="1em">
-                                    <use href="#check2"></use>
-                                </svg>
-                            </button>
-                        </li>
-                    </ul>
-                </div>
-
-            </li>
         </ul>
     </div>
 </nav>
