--- a/src/app/components/h-paciente/h-paciente.component.html
+++ b/src/app/components/h-paciente/h-paciente.component.html
@@ -50,7 +50,6 @@
     </symbol>
 </svg>
 
-
 <nav class="navbar navbar-expand-md sticky-top border-bottom">
     <div class="container">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -62,9 +61,9 @@
             <span class="fs-4 fw-bold txtColor">TEApp</span>
         </a>
         <ul class="nav nav-pills">
-            <li class="nav-item"><a class="nav-link txtColor" routerLink="/inicioSesion">Iniciar sesión</a></li>
-            <li class="nav-item"><a class="nav-link txtColor" routerLink="/registro">Regístrate</a></li>
-            <li class ="nav-item">
+            <!--<li class="nav-item"><a class="nav-link txtColor" routerLink="/inicioSesion">Iniciar sesión</a></li>
+            <li class="nav-item"><a class="nav-link txtColor" routerLink="/registro">Regístrate</a></li>-->
+            <li class="nav-item">
                 <div class="dropdown">
                     <button class="btn btn-primary py-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button"
                         aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (auto)" (click)="setTheme(theme)">
@@ -100,7 +99,6 @@
                         </li>
                     </ul>
                 </div>
-
             </li>
         </ul>
     </div>
