autorizacion con guards, pagina especialista falta ver qué sucede con el localStorage

--- a/src/app/components/despliegue-pacientes/despliegue-pacientes.component.html
+++ b/src/app/components/despliegue-pacientes/despliegue-pacientes.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-h-paciente></app-h-paciente>
 
 <body class="bg-body-tertiary">
     <div class="container">
@@ -71,3 +71,4 @@
         </main>
     </div>
 </body>
+<app-menu-especialista></app-menu-especialista>
