--- a/src/app/components/bienvnida-especialista/bienvnida-especialista.component.html
+++ b/src/app/components/bienvnida-especialista/bienvnida-especialista.component.html
@@ -6,11 +6,13 @@
     <span>Bienvenido a TEApp</span>
   </h1>
   <hr class="my-3">
-  <p class="lead">¡Una gran aventura te espera!</p>
+  <p class="lead">¡Es un honor saber que colaboras con nosotros!</p>
   <p class="lead text-justify">
     Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. 
     Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500.
   </p>
-  <app-mnu-paciente></app-mnu-paciente>
 </div>
+
+<app-menu-especialista></app-menu-especialista>
+
 
