modificar datos correcto

--- a/src/app/components/alta-usuario/alta-usuario.component.html
+++ b/src/app/components/alta-usuario/alta-usuario.component.html
@@ -94,5 +94,5 @@
             </div>
         </main>
     </div>
-    <script src="checkout.js"></script>
+    <script src="../../../assets/js/checkout.js"></script>
 </body>
