--- a/src/app/components/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/components/inicio-sesion/inicio-sesion.component.html
@@ -38,4 +38,5 @@
 
             <button class="btn btn-primary w-100 py-2" type="submit">Iniciar sesión</button>
         </form>
+        <script src="../../../assets/js/checkout.js"></script>
     </body>
