--- a/src/app/components/menu-especialista/menu-especialista.component.html
+++ b/src/app/components/menu-especialista/menu-especialista.component.html
@@ -22,8 +22,8 @@
         <span class="material-symbols-outlined color">stadia_controller</span>
       </a>
     </div>
-    <div class="sub-button shadow" (click)="cierreSesion()">
-      <a  target="_blank">
+    <div class="sub-button shadow">
+      <a routerLink="/modificarDatos" target="_blank">
         <span class="material-symbols-outlined color">edit</span>
       </a>
     </div>
