--- a/src/app/components/mnu-paciente/mnu-paciente.component.html
+++ b/src/app/components/mnu-paciente/mnu-paciente.component.html
@@ -19,7 +19,7 @@
       </a>
     </div>
     <div class="sub-button shadow">
-      <a href="google.com" target="_blank">
+      <a routerLink="/modificarDatos" target="_blank">
         <span class="material-symbols-outlined color">edit</span>
       </a>
     </div>
