--- a/src/app/components/modificar-datos/modificar-datos.component.html
+++ b/src/app/components/modificar-datos/modificar-datos.component.html
@@ -1,1 +1,78 @@
-<p>modificar-datos works!</p>
+<app-h-paciente></app-h-paciente>
+<body class="bg-body-tertiary">
+    <div class="container">
+        <main class="my-3">
+            <div class="d-flex align-items-center justify-content-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="red" class="bi bi-person-fill-add" viewBox="0 0 16 16">
+                    <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                    <path d="M2 13c0 1 1 1 1 1h5.256A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1 1.544-3.393Q8.844 9.002 8 9c-5 0-6 3-6 4"/>
+                </svg>
+                <h2 class="ms-2 mb-0">Modifcar Información</h2>
+            </div>
+
+            <div *ngIf="altaSuccess" class="alert alert-success" role="alert">
+                {{altaMessage}}
+            </div>
+            <div *ngIf="!altaError" class="alert alert-danger" role="alert">
+                {{altaMessage}}
+            </div>
+
+            <div class="row g-5">
+                <div class="col-md-12 col-lg-12 order-md-last">
+                    <div>
+                        <form (ngSubmit)="guardarCambios()" class="needs-validation" novalidate
+                            [class.was-validated]="submitted">
+                            <div class="row g-3">
+                                <div class="col-sm-12">
+                                    <label for="nombres" class="form-label">Nombre(s)</label>
+                                    <input type="text" class="form-control" id="nombres" [(ngModel)]="nombres"
+                                        name="nombres" required name="nombres">
+                                    <div class="invalid-feedback">
+                                        El nombre del usuario es un dato obligatorio.
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <label for="paterno" class="form-label">Apellido paterno</label>
+                                    <input type="text" class="form-control" id="paterno" [(ngModel)]="paterno"
+                                        name="paterno" required>
+                                    <div class="invalid-feedback">
+                                        El apellido paterno del usuario es un dato obligatorio.
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <label for="materno" class="form-label">Apellido materno</label>
+                                    <input type="text" class="form-control" id="materno" [(ngModel)]="materno"
+                                        value={{materno}} name="materno" required>
+                                    <div class="invalid-feedback">
+                                        El apellido materno del usuario es un dato obligatorio.
+                                    </div>
+                                </div>
+
+                                <div class="col-12">
+                                    <label for="correo" class="form-label">Correo electrónico</label>
+                                    <div class="input-group has-validation">
+                                        <span class="input-group-text">&#64;</span>
+                                        <input type="email" class="form-control" id="correo" [(ngModel)]="correo"
+                                        value={{correo}} disabled name="correo">
+                                    </div>
+                                </div>
+
+                                
+                            </div>
+
+                            <hr class="my-3">
+
+                            <button class="w-100 btn btn-primary btn-lg" type="submit">Guardar cambios</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+    <script src="../../../assets/js/checkout.js"></script>
+</body>
+
+<app-menu-especialista *ngIf="tipo==='1'"></app-menu-especialista>
+<app-mnu-paciente *ngIf="tipo==='2'"></app-mnu-paciente>
