--- a/src/app/components/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/components/inicio-sesion/inicio-sesion.component.html
@@ -35,8 +35,9 @@
                 <input class="form-check-input" type="checkbox" [(ngModel)]="tipoUsuarioBtn" name="tipoUsuarioBtn" (change)="tipoUser()" role="switch" id="flexSwitchCheckChecked" checked>
                 <label class="form-check-label" for="flexSwitchCheckChecked">{{tipoUsuario}}</label>
             </div>
-
+            <a routerLink="/recuperarContrasena">¿Olvidate tu contraseña?</a>
             <button class="btn btn-primary w-100 py-2" type="submit">Iniciar sesión</button>
         </form>
         <script src="../../../assets/js/checkout.js"></script>
+        <router-outlet></router-outlet>
     </body>
