Lista actividad 4, error con color de lista, faltan agregar imagenes y agregar las situaciones para Asco, Tristeza y Miedo

--- a/src/app/components/actividades/prueba/prueba.component.html
+++ b/src/app/components/actividades/prueba/prueba.component.html
@@ -92,7 +92,7 @@
   <div>
     <label for="repetitionsEnojo4">Número de repeticiones (Enojo):</label>
     <input type="number" id="repetitionsEnojo4" [(ngModel)]="repetitionsEnojo4" min="1" value="1">
-    <button [routerLink]="['/activity4', 'Enojo', repetitionsEnojo4]">Act4 Miedo</button>
+    <button [routerLink]="['/activity4', 'Enojo', repetitionsEnojo4]">Act4 Enojo</button>
   </div>
   
   <div>
