pacientes asignados hasta desplegar los pacientes de cada especialista

--- a/src/app/components/menu-especialista/menu-especialista.component.html
+++ b/src/app/components/menu-especialista/menu-especialista.component.html
@@ -18,7 +18,7 @@
       </a>
     </div>
     <div class="sub-button shadow">
-      <a href="google.com" target="_blank">
+      <a routerLink="/pacientesAsignados" target="_blank">
         <span class="material-symbols-outlined color">stadia_controller</span>
       </a>
     </div>
