despliegue actividades completo con funcion del boton jugar e imagen correcta

--- a/src/app/components/actividades/activity-1/activity-1.component.html
+++ b/src/app/components/actividades/activity-1/activity-1.component.html
@@ -21,7 +21,7 @@
     </mat-grid-tile>
   
     <mat-grid-tile colspan="1" class="reduce-top-margin">
-      <button class="center" routerLink="/prueba">Siguiente</button>
+      <button class="center" routerLink="/actividadesAsignadas">Siguiente</button>
     </mat-grid-tile>
   </mat-grid-list>
   
@@ -34,7 +34,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
-          <button type="button" class="btn btn-primary modal-green" data-bs-dismiss="modal" routerLink="/prueba">Cerrar</button>
+          <button type="button" class="btn btn-primary modal-green" data-bs-dismiss="modal" routerLink="/actividadesAsignadas">Cerrar</button>
         </div>
       </div>
     </div>
