--- a/src/app/components/actividades/activity-3/activity-3.component.html
+++ b/src/app/components/actividades/activity-3/activity-3.component.html
@@ -40,7 +40,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
-        <button type="button" class="btn btn-primary modal-green"  data-bs-dismiss="modal" routerLink = "/prueba">Cerrar</button>
+        <button type="button" class="btn btn-primary modal-green"  data-bs-dismiss="modal" routerLink = "/actividadesAsignadas">Cerrar</button>
       </div>
     </div>
   </div>
