--- a/src/app/components/bienvenida-paciente/bienvenida-paciente.component.html
+++ b/src/app/components/bienvenida-paciente/bienvenida-paciente.component.html
@@ -8,8 +8,7 @@
   <hr class="my-3">
   <p class="lead">¡Una gran aventura te espera!</p>
   <p class="lead text-justify">
-    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. 
-    Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500.
+    Cada emoción es una nueva oportunidad para aprender y crecer. Juntos, exploraremos el maravilloso mundo de tus sentimientos y descubriremos el poder que hay en ti para manejarlos. ¡Te acompañaremos en cada paso!
   </p>
   <app-mnu-paciente></app-mnu-paciente>
 </div>
