--- a/src/app/components/mnu-paciente/mnu-paciente.component.html
+++ b/src/app/components/mnu-paciente/mnu-paciente.component.html
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class="sub-button shadow">
-      <a href="google.com" target="_blank">
+      <a routerLink="/actividadesAsignadas" target="_blank">
         <span class="material-symbols-outlined color">stadia_controller</span>
       </a>
     </div>
