--- a/src/app/components/actividades/activity-5/activity-5.component.html
+++ b/src/app/components/actividades/activity-5/activity-5.component.html
@@ -1,3 +1,12 @@
+<button mat-icon-button color="black" aria-label="clear" data-bs-toggle="modal" data-bs-target="#Backdrop">
+  <mat-icon>clear</mat-icon>
+</button>
+
+<button mat-icon-button color="black" aria-label="help" class="right" data-bs-toggle="modal" data-bs-target="#Helpdrop">
+  <mat-icon >help</mat-icon>
+</button>
+<br>
+
 <mat-grid-list cols="1" rowHeight="600px">
     <mat-grid-tile colspan="1">
     <div *ngIf="mostrarHistoria" class="contenedor">
@@ -28,3 +37,39 @@
     
     
     </mat-grid-list>
+
+
+
+
+    
+  <!-- Modal -->
+  <div class="modal fade" id="Backdrop" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-body">
+          Si cierras esta actividad perderás todo tu progreso
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
+          <button type="button" class="btn btn-primary modal-green" data-bs-dismiss="modal" routerLink="/actividadesAsignadas">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  
+  
+  <!-- Modal Help -->
+  <div class="modal fade" id="Helpdrop"  data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-body">
+          En esta actividad deberás acomodar la actitud correcta que debes tomar con respecto a la situación que se te presenta.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
