--- a/src/app/components/bienvnida-especialista/bienvnida-especialista.component.html
+++ b/src/app/components/bienvnida-especialista/bienvnida-especialista.component.html
@@ -8,8 +8,7 @@
   <hr class="my-3">
   <p class="lead">¡Es un honor saber que colaboras con nosotros!</p>
   <p class="lead text-justify">
-    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. 
-    Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500.
+    En TEApp, creemos que cada niño merece el mejor apoyo posible para comprender y manejar sus emociones. Gracias a tu dedicación y experiencia, juntos podemos hacer una diferencia significativa en la vida de estos pequeños.
   </p>
 </div>
 
