--- a/src/app/components/despliegue-actividades/despliegue-actividades.component.html
+++ b/src/app/components/despliegue-actividades/despliegue-actividades.component.html
@@ -25,7 +25,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{actividad.act}} {{actividad.emocion}}</h5>
                             <p class="card-text">{{descripcionAct(actividad.act)}}</p>
-                            <a [routerLink]="ruta(actividad.act, actividad.emocion, actividad.reactivos)" class="btn btn-primary">Jugar</a>
+                            <a [routerLink]="ruta(actividad.act, actividad.emocion, actividad.reactivos, actividad.idact)" class="btn btn-primary">Jugar</a>
                         </div>
                     </div>
                 </div>
