--- a/src/app/components/menu-especialista/menu-especialista.component.html
+++ b/src/app/components/menu-especialista/menu-especialista.component.html
@@ -13,7 +13,7 @@
       </a>
     </div>
     <div class="sub-button shadow">
-      <a href="google.com" target="_blank">
+      <a routerLink="/estadisticaEspecialista" target="_blank">
         <span class="material-symbols-outlined color">bar_chart</span>
       </a>
     </div>
