--- a/src/app/components/mnu-paciente/mnu-paciente.component.html
+++ b/src/app/components/mnu-paciente/mnu-paciente.component.html
@@ -14,7 +14,7 @@
       </a>
     </div>
     <div class="sub-button shadow">
-      <a href="google.com" target="_blank">
+      <a [routerLink]="['/emocionEstadisticaPaciente', idPaciente]" target="_blank">
         <span class="material-symbols-outlined color">bar_chart</span>
       </a>
     </div>
