--- a/src/app/components/actividades/activity-5/activity-5.component.html
+++ b/src/app/components/actividades/activity-5/activity-5.component.html
@@ -1,75 +1,80 @@
+<!-- Botones para cerrar la actividad y ayuda -->
 <button mat-icon-button color="black" aria-label="clear" data-bs-toggle="modal" data-bs-target="#Backdrop">
   <mat-icon>clear</mat-icon>
 </button>
 
 <button mat-icon-button color="black" aria-label="help" class="right" data-bs-toggle="modal" data-bs-target="#Helpdrop">
-  <mat-icon >help</mat-icon>
+  <mat-icon>help</mat-icon>
 </button>
 <br>
+<br>
 
-<mat-grid-list cols="1" rowHeight="600px">
-    <mat-grid-tile colspan="1">
-    <div *ngIf="mostrarHistoria" class="contenedor">
+<!-- Grid para las historias y opciones -->
+<mat-grid-list cols="1" rowHeight="1000px">
+  <mat-grid-tile colspan="1">
+    <div *ngIf="mostrarHistoria" class="contendor">
+      <div class="container-img" >
+        <img [src]="imagenActual" alt="Imagen de la historia" class="historia-imagen" width="400" height="300"> <!-- Nueva imagen -->
+      </div>
       <div class="container">
-        <p [innerHTML]="historia"></p>
+        <p [innerHTML]="historiaActual"></p>
       </div>
       <br>
       <div *ngIf="mostrarOpciones">
-        <button *ngFor="let opcion of opciones[emocion][pasoActual]" (click)="elegirOpcion(opcion.correcta)" class="center">{{ opcion.texto }}</button>
+        <button *ngFor="let opcion of opciones[emocion][pasoActual]; let i = index"
+                (click)="elegirOpcion(opcion.correcta, i)" class="center">
+          {{ opcion.texto }}
+        </button>
+        <br>
+        <br>
       </div>
       <div *ngIf="mostrarError" class="contenedor">
-        <div class="container2">
-         <p>Esa no es la mejor opción.</p>
-        </div>
         <button (click)="regresar()" class="center">Regresar</button>
+        <div class="container2">
+          <p>Esa no es la mejor opción.</p>
+        </div>
+        <br>
+        <div class="container3">
+          <p>{{ reflexionActual }}</p> <!-- Mostrar la reflexión aquí -->
+        </div>
       </div>
     </div>
-    </mat-grid-tile>
-    <mat-grid-tile colspan="1" class="reduce-top-margin">
-    <div *ngIf="mostrarFin" class="contenedor">
-      <div class="container">
-        <p>Fin de la historia.</p>
+  </mat-grid-tile>
+</mat-grid-list>
+
+
+<div *ngIf="mostrarFin" class="contenedor">
+  <div class="container">
+    <p>Fin de la historia.</p>
+  </div>
+  <button (click)="terminarHistoria()" class="center">Terminar Historia</button>
+</div>
+
+<!-- Modal para confirmar cierre -->
+<div class="modal fade" id="Backdrop" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        Si cierras esta actividad perderás todo tu progreso.
       </div>
-     
-      <button (click)="terminarHistoria()" class="center">Terminar Historia</button>
-    </div>
-    </mat-grid-tile>
-    
-    
-    </mat-grid-list>
-
-
-
-
-    
-  <!-- Modal -->
-  <div class="modal fade" id="Backdrop" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-body">
-          Si cierras esta actividad perderás todo tu progreso
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
-          <button type="button" class="btn btn-primary modal-green" data-bs-dismiss="modal" routerLink="/actividadesAsignadas">Cerrar</button>
-        </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
+        <button type="button" class="btn btn-primary modal-green" data-bs-dismiss="modal" routerLink="/actividadesAsignadas">Cerrar</button>
       </div>
     </div>
   </div>
-  
-  
-  
-  <!-- Modal Help -->
-  <div class="modal fade" id="Helpdrop"  data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-body">
-          En esta actividad deberás acomodar la actitud correcta que debes tomar con respecto a la situación que se te presenta.
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
-        </div>
+</div>
+
+<!-- Modal de ayuda -->
+<div class="modal fade" id="Helpdrop" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        En esta actividad deberás acomodar la actitud correcta que debes tomar con respecto a la situación que se te presenta.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
       </div>
     </div>
   </div>
-  
+</div>
