--- a/src/app/components/estadistica/actividades-paciente/actividades-paciente.component.html
+++ b/src/app/components/estadistica/actividades-paciente/actividades-paciente.component.html
@@ -8,7 +8,7 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="rgb(13, 110, 253)"
                       class="bi bi-bar-chart-fill" viewBox="0 0 16 16">
                       <path d="M1 11a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1zm5-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1z"/>                  </svg>
-                  <h2 class="ms-2 mb-0">Estadistica de actividades</h2>
+                  <h2 class="ms-2 mb-0">Estadística de actividades</h2>
               </div>
           </div>
 
@@ -20,7 +20,7 @@
                 <img [src]="'../../../assets/img/Emociones/imgCard/act3.png'" class="card-img-top" alt="...">
                   <div class="card-body">
                       <h5 class="card-title">Actividad 3</h5>
-                      <p class="card-text">Ve la estadistica de esta actividad</p>
+                      <p class="card-text">Ve la estadística de esta actividad</p>
                       <input type="number" id="reactivo" class="form-control me-2 width" placeholder="Reactivos" min="1" [(ngModel)]="reactivo" name="reactivo">
                       <a class="btn btn-primary" (click)="desplegarEst('activity3')">Ir</a>
                   </div>
@@ -32,7 +32,7 @@
                 <img [src]="'../../../assets/img/Emociones/imgCard/act4.png'" class="card-img-top" alt="...">
                   <div class="card-body">
                       <h5 class="card-title">Actividad 4</h5>
-                      <p class="card-text">Ve la estadistica de esta actividad</p>
+                      <p class="card-text">Ve la estadística de esta actividad</p>
                       <input type="number" id="reactivos" class="form-control me-2 width" placeholder="Reactivos" min="1" [(ngModel)]="reactivo" name="reactivo">
                       <a class="btn btn-primary" (click)="desplegarEst('activity4')">Ir</a>
                   </div>
@@ -44,7 +44,7 @@
                 <img [src]="'../../../assets/img/Emociones/imgCard/act5.png'" class="card-img-top" alt="...">
                   <div class="card-body">
                       <h5 class="card-title">Actividad 5</h5>
-                      <p class="card-text">Ve la estadistica de esta actividad</p>
+                      <p class="card-text">Ve la estadística de esta actividad</p>
                       <a class="btn btn-primary" (click)="desplegarEst('activity5')">Ir</a>
                   </div>
               </div>
