--- a/src/app/components/estadistica/emociones-especialista/emociones-especialista.component.html
+++ b/src/app/components/estadistica/emociones-especialista/emociones-especialista.component.html
@@ -9,7 +9,7 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="rgb(13, 110, 253)"
                       class="bi bi-bar-chart-fill" viewBox="0 0 16 16">
                       <path d="M1 11a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1zm5-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1z"/>                  </svg>
-                  <h2 class="ms-2 mb-0">Estadistica</h2>
+                  <h2 class="ms-2 mb-0">Estadística</h2>
               </div>
           </div>
 
@@ -19,7 +19,7 @@
                 <img [src]="'../../../assets/img/Emociones/estadistica/alegria.jpg'" class="card-img-top" alt="...">
                   <div class="card-body">
                       <h5 class="card-title">Alegría</h5>
-                      <p class="card-text">Ve la estadistica de las diferentes actividades de esta emocion</p>
+                      <p class="card-text">Ve la estadística de las diferentes actividades de esta emoción</p>
                       <a class="btn btn-primary" [routerLink]="['/actividadEstadisticaPaciente', 'alegria',idpac]">Ir</a>
                   </div>
               </div>
@@ -30,7 +30,7 @@
                 <img [src]="'../../../assets/img/Emociones/estadistica/enojo.jpg'" class="card-img-top" alt="...">
                   <div class="card-body">
                       <h5 class="card-title">Enojo</h5>
-                      <p class="card-text">Ve la estadistica de las diferentes actividades de esta emocion</p>
+                      <p class="card-text">Ve la estadística de las diferentes actividades de esta emoción</p>
                       <a class="btn btn-primary" [routerLink]="['/actividadEstadisticaPaciente', 'enojo',idpac]" >Ir</a>
                   </div>
               </div>
@@ -41,7 +41,7 @@
                 <img [src]="'../../../assets/img/Emociones/estadistica/miedo.jpg'" class="card-img-top" alt="...">
                   <div class="card-body">
                       <h5 class="card-title">Miedo</h5>
-                      <p class="card-text">Ve la estadistica de las diferentes actividades de esta emocion</p>
+                      <p class="card-text">Ve la estadística de las diferentes actividades de esta emoción</p>
                       <a class="btn btn-primary" [routerLink]="['/actividadEstadisticaPaciente', 'miedo',idpac]" >Ir</a>
                   </div>
               </div>
@@ -52,7 +52,7 @@
                 <img [src]="'../../../assets/img/Emociones/estadistica/tristeza.jpg'" class="card-img-top" alt="...">
                   <div class="card-body">
                       <h5 class="card-title">Tristeza</h5>
-                      <p class="card-text">Ve la estadistica de las diferentes actividades de esta emocion</p>
+                      <p class="card-text">Ve la estadística de las diferentes actividades de esta emoción</p>
                       <a class="btn btn-primary" [routerLink]="['/actividadEstadisticaPaciente', 'tristeza',idpac]">Ir</a>
                   </div>
               </div>
@@ -63,7 +63,7 @@
                 <img [src]="'../../../assets/img/Emociones/estadistica/asco.jpg'" class="card-img-top" alt="...">
                   <div class="card-body">
                       <h5 class="card-title">Asco</h5>
-                      <p class="card-text">Ve la estadistica de las diferentes actividades de esta emocion</p>
+                      <p class="card-text">Ve la estadística de las diferentes actividades de esta emoción</p>
                       <a class="btn btn-primary" [routerLink]="['/actividadEstadisticaPaciente', 'asco',idpac]">Ir</a>
                   </div>
               </div>
