--- a/src/app/components/estadistica/estadistica-especialista/estadistica-especialista.component.html
+++ b/src/app/components/estadistica/estadistica-especialista/estadistica-especialista.component.html
@@ -10,7 +10,7 @@
                             <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
                             <path d="M2 13c0 1 1 1 1 1h5.256A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1 1.544-3.393Q8.844 9.002 8 9c-5 0-6 3-6 4"/>
                         </svg>
-                        <h2 class="ms-2 mb-0">Ver estadistica pacientes</h2>
+                        <h2 class="ms-2 mb-0">Ver estadística pacientes</h2>
                     </div>
 
                 <div *ngIf="altaSuccess" class="alert alert-success" role="alert">
@@ -28,7 +28,7 @@
                         <tr class="text-center">
                             <th scope="col">Correo</th>
                             <th scope="col">Nombre</th>
-                            <th scope="col">Estadistica</th>
+                            <th scope="col">Estadística</th>
                         </tr>
                     </thead>
                     <tbody>
