Ortografía correción inicio-componente

--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -89,7 +89,7 @@
             </svg>
           </div>
           <h3 class="fs-3 text-body-emphasis">Niveles de dificultad</h3>
-          <p>Actividades con niveles de dificultad ajustables según las necesidades y progresos individuales de cada paciente, definidos por los especialista.</p>
+          <p>Actividades con niveles de dificultad ajustables según las necesidades y progresos individuales de cada paciente, definidos por los especialistas.</p>
         </div>
         <div class="feature col">
           <div
