admin completo, medificar datos de admin completos

--- a/src/app/components/modificar-datos/modificar-datos.component.html
+++ b/src/app/components/modificar-datos/modificar-datos.component.html
@@ -76,3 +76,4 @@
 
 <app-menu-especialista *ngIf="tipo==='1'"></app-menu-especialista>
 <app-mnu-paciente *ngIf="tipo==='2'"></app-mnu-paciente>
+<app-menuu-admin *ngIf="tipo==='4'"></app-menuu-admin>
