Actividad 4 correguida, historietas terminadas Actividad 5

--- a/src/app/components/actividades/activity-1/activity-1.component.html
+++ b/src/app/components/actividades/activity-1/activity-1.component.html
@@ -21,7 +21,7 @@
     </mat-grid-tile>
   
     <mat-grid-tile colspan="1" class="reduce-top-margin">
-      <button class="center" (click)="finalizar()" routerLink="/actividadesAsignadas">Finalizar</button>
+      <button class="center" (click)="guardarEst()" routerLink="/actividadesAsignadas">Finalizar</button>
     </mat-grid-tile>
   </mat-grid-list>
   
