--- a/src/app/components/actividades/activity-2/activity-2.component.html
+++ b/src/app/components/actividades/activity-2/activity-2.component.html
@@ -43,7 +43,7 @@
   </mat-grid-tile>
 
   <mat-grid-tile colspan="1" class="reduce-top-margin">
-    <button class="center" routerLink="/actividadesAsignadas">Siguiente</button>
+    <button class="center" (click)="guardarEst()" routerLink="/actividadesAsignadas">Siguiente</button>
   </mat-grid-tile>
 </mat-grid-list>
 
