--- a/src/app/components/actividades/activity-3/activity-3.component.html
+++ b/src/app/components/actividades/activity-3/activity-3.component.html
@@ -1,3 +1,7 @@
+<!-- Contenedores para las imágenes animadas -->
+<div id="feedback-container" [ngClass]="{'show': showFeedback}">
+  <img [src]="feedbackImage" alt="Feedback Image" class="feedback-image">
+</div>
 
 
 <button mat-icon-button color="black" aria-label="clear" data-bs-toggle="modal" data-bs-target="#Backdrop" class="left">
