despliegue esp con menu y encabezado correctos

--- a/src/app/components/despliegue-especialistas/despliegue-especialistas.component.html
+++ b/src/app/components/despliegue-especialistas/despliegue-especialistas.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-h-paciente></app-h-paciente>
 
 <body class="bg-body-tertiary">
     <div class="container">
@@ -70,3 +70,5 @@
             </div>
         </main>
     </div>
+
+<app-menuu-admin></app-menuu-admin>
