--- a/src/app/components/actividades/activity-5/activity-5.component.html
+++ b/src/app/components/actividades/activity-5/activity-5.component.html
@@ -29,7 +29,7 @@
         <br>
       </div>
       <div *ngIf="mostrarError" class="contenedor">
-        <button (click)="regresar()" class="center">Regresar</button>
+        <button (click)="regresar()" class="center-back">Regresar</button>
         <div class="container2">
           <p>Esa no es la mejor opción.</p>
         </div>
