se eliminan las rutas de redirects y se elimina target black de los menus

--- a/src/app/components/menuu-admin/menuu-admin.component.html
+++ b/src/app/components/menuu-admin/menuu-admin.component.html
@@ -8,12 +8,12 @@
       </div>
     </div>
     <div class="sub-button shadow">
-      <a routerLink="/validarEspecialistas" target="_blank">
+      <a routerLink="/validarEspecialistas">
         <span class="material-symbols-outlined color">user_attributes</span>
       </a>
     </div>
     <div class="sub-button shadow">
-      <a routerLink="/modificarDatos" target="_blank">
+      <a routerLink="/modificarDatos">
         <span class="material-symbols-outlined color">edit</span>
       </a>
     </div>
