--- a/src/app/components/menu-especialista/menu-especialista.component.html
+++ b/src/app/components/menu-especialista/menu-especialista.component.html
@@ -8,22 +8,22 @@
       </div>
     </div>
     <div class="sub-button shadow">
-      <a routerLink="/validarPacientes" target="_blank">
+      <a routerLink="/validarPacientes">
         <span class="material-symbols-outlined color">user_attributes</span>
       </a>
     </div>
     <div class="sub-button shadow">
-      <a routerLink="/estadisticaEspecialista" target="_blank">
+      <a routerLink="/estadisticaEspecialista">
         <span class="material-symbols-outlined color">bar_chart</span>
       </a>
     </div>
     <div class="sub-button shadow">
-      <a routerLink="/pacientesAsignados" target="_blank">
+      <a routerLink="/pacientesAsignados">
         <span class="material-symbols-outlined color">stadia_controller</span>
       </a>
     </div>
     <div class="sub-button shadow">
-      <a routerLink="/modificarDatos" target="_blank">
+      <a routerLink="/modificarDatos">
         <span class="material-symbols-outlined color">edit</span>
       </a>
     </div>
