--- a/src/app/components/mnu-paciente/mnu-paciente.component.html
+++ b/src/app/components/mnu-paciente/mnu-paciente.component.html
@@ -9,17 +9,17 @@
       </div>
     </div>
     <div class="sub-button shadow">
-      <a routerLink="/actividadesAsignadas" target="_blank">
+      <a routerLink="/actividadesAsignadas">
         <span class="material-symbols-outlined color">stadia_controller</span>
       </a>
     </div>
     <div class="sub-button shadow">
-      <a [routerLink]="['/emocionEstadisticaPaciente', idPaciente]" target="_blank">
+      <a [routerLink]="['/emocionEstadisticaPaciente', idPaciente]">
         <span class="material-symbols-outlined color">bar_chart</span>
       </a>
     </div>
     <div class="sub-button shadow">
-      <a routerLink="/modificarDatos" target="_blank">
+      <a routerLink="/modificarDatos">
         <span class="material-symbols-outlined color">edit</span>
       </a>
     </div>
