Correción act3 botones

--- a/src/app/components/actividades/activity-3/activity-3.component.css
+++ b/src/app/components/actividades/activity-3/activity-3.component.css
@@ -40,6 +40,7 @@ html, body {
     box-shadow: 
     0px 3px 0 5px rgb(177, 176, 176); /* Sombra en la parte inferior *//* Sombra en la parte derecha */
     transition: transform 0.3s ease 0s;
+    border-radius: 10px;
   }
 
   .image-button:hover {
